11_6_2021
First commit of dev-v0.1.5
Static libpd lib now built & linked locally.
Added "libpd" submodule to GIT.
Changed Makefile, lib path now relative. Build still static.
MTC, midi clock tick, Song Position, Song Select all working.

6_6_2021
v0.1.3 Branch
Virtually a complete rewrite of the JACK MIDI code
- One general midi class, vs. three previously
- much more streamlined
Added debug option to Makefile (DEBUG=true)

3_6_2021
v0.1.0
First official release

27_5_2021
- Makefile now links LibPd library statically
- Change "help->Midi port->default" msg to "- default 1:1"

26_5_2021
- cleanup comments
- Don't call malloc() if # of audio ports == 0
	(those audio pointers shouldn't be referenced in any case)
- init the audio pointers to NULL